force-app/main/default/objects/Contract__c/Contract__c.object-meta.xml
<CustomObject>
    <label>Contrato</label>
    <nameField>
        <label>Nome de Contrato</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contratos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>