force-app/main/default/objects/Contract__c/fields/ContractTerm__c.field-meta.xml
<CustomField>
    <fullName>ContractTerm__c</fullName>
    <label>Prazo do contrato (meses)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>