force-app/main/default/objects/Contract__c/validationRules/RequiredExternalId.validationRule-meta.xml
<ValidationRule>
    <fullName>RequiredExternalId</fullName>
    <active>true</active>
    <description>ExternalId__c is mandatory</description>
    <errorConditionFormula>ISBLANK(ExternalId__c)</errorConditionFormula>
    <errorMessage>Error: ExternalId__c is blank</errorMessage>
</ValidationRule>