force-app/main/default/objects/Contract__c/listViews/TerminationQueue_Contract.listView-meta.xml
<ListView>
    <fullName>TerminationQueue_Contract</fullName>
    <filterScope>Queue</filterScope>
    <label>Fila de rescisão</label>
    <queue>TerminationQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>